--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="container-lg px-3 my-5 markdown-body">
       <h1><a href="https://olopplanet.github.io/">olopplanet.github.io</a></h1>
       <h1 id="olop--olopplanet">Le site officiel d'OlopPlanet</h1>
-      <div id="EcoBeta" style="background-color:green;color:black;"><b>Bêta | </b>Retrouvez notre site web en bêta fonctionnant sur <a href="EcoWeb/index.html">EcoWeb</a></div>
+      <div id="EcoBeta" style="background-color:green;color:white;"><b>Bêta | </b>Retrouvez notre site web en bêta fonctionnant sur <a href="EcoWeb/index.html" style="color:rgb(255, 255, 255, 0.74);">EcoWeb</a></div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
     <script>anchors.add();</script>
