--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
       <h1><a href="https://olopplanet.github.io/">olopplanet.github.io</a></h1>
       <h1 id="olop--olopplanet">Le site officiel d'OlopPlanet</h1>
       <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
-<div id="EcoBeta" style="background-color:green;color:white;"><div style="float: left;background-color:green;color:white;"><b>Bêta | </b>Retrouvez <a href="https://ecolowweb.000webhostapp.com/Engine/?Eurl=https://olopplanet.github.io">ici</a> notre site web en bêta fonctionnant sur <a href="EcoWeb/index.html" style="color:rgb(255, 255, 255, 0.74);">EcoWeb</a> <button onClick='$("#EcoBeta").hide("slide");'>X</button></div></div>
+<div id="EcoBeta" style="background-color:green;color:white;"><div style="float: left;background-color:green;color:white;"><b>Bêta | </b>Retrouvez <a href="https://ecolowweb.000webhostapp.com/Engine/?Eurl=https://olopplanet.github.io">ici</a> notre site web en bêta fonctionnant sur <a href="EcoWeb/index.html" style="color:rgb(255, 255, 255, 0.74);">EcoWeb</a> <button onClick='$("#EcoBeta").hide("slide");'>X</button></div></div><br>
+<a href="Store/">Notre store</a>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
     <script>anchors.add();</script>
