--- a/Store/app.html
+++ b/Store/app.html
@@ -47,7 +47,7 @@
         const str = window.location.href;
         const words = str.split('#');
         $("#c").load("App/"+words[1]+".app");
-        $("down").html('<a href="Downloads/'+words[1]+'"><img src="Download on Olop.png"></a>')
+        $("down").html('<a href="Downloads/'+words[1]+'"><img src="Download on Olop.png"></a>');
     });
     </script>
   </body>
