--- a/Store/app.html
+++ b/Store/app.html
@@ -33,7 +33,7 @@
 <!-- end custom head snippets -->
 
   </head>
-  <body><script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+  <body style="background-color:rgb(51, 51, 51);color:white;"><script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
     <div class="container-lg px-3 my-5 markdown-body">
       <h1><a href="https://olopplanet.github.io/">olopplanet.github.io</a></h1>
       <h1 id="olop--olopplanet">Le site officiel d'OlopPlanet</h1>
