--- a/Code&Or/index.html
+++ b/Code&Or/index.html
@@ -2,15 +2,16 @@
 <html>
     <head>
         <title>Code&Or</title>
+        <link rel="stylesheet" href="/assets/css/style.css?v=08b45e1e75831b5f74fa98d66999f65cb2c41da9">
         <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
         <script type="text/javascript">
             function load(){
-
+                
             }
         </script>
     </head>
     <body>
+        <div id="load"><h1>Code&Or</h1><br>Chargement en cours... <br><noscript>Activez javascript pour utiliser Code&or</noscript></div>
         
-        <div id="body"><h1>Code&Or</h1><br>Chargement en cours... <br><noscript>Activez javascript pour utiliser Code&or</noscript></div>
     </body>
 </html>
