--- a/Code&Or/index.html
+++ b/Code&Or/index.html
@@ -31,7 +31,7 @@
     </head>
     <body>
         <div id="load"><h1>Code&Or</h1><br>Chargement en cours... <br><noscript>Activez javascript pour utiliser Code&or</noscript></div>
-        <div id="chargement"></div>
+        <div id="chargement" style="color:yellow"><h1>Code&Or</h1></div>
         Olop !
     </body>
 </html>
