--- a/Code&Or/index.html
+++ b/Code&Or/index.html
@@ -28,6 +28,7 @@
               }
             };
           </script>
+          <meta name="viewport">
     </head>
     <body>
         <div id="load"><h1>Code&Or</h1><br>Chargement en cours... <br><noscript>Activez javascript pour utiliser Code&or</noscript></div>
