--- a/Code&Or/index.html
+++ b/Code&Or/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <head lang="fr">
         <title>Code&Or</title>
         <link rel="stylesheet" href="files/css.css">
         <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
@@ -29,6 +29,7 @@
             };
           </script>
           <meta name="viewport">
+          <meta name="description" content="Code&Or est un système de codagde de blocs, texte & intlligence artificielle">
     </head>
     <body>
         <div id="load"><h1>Code&Or</h1><br>Chargement en cours... <br><noscript>Activez javascript pour utiliser Code&or</noscript></div>
