--- a/Code&Or/index.html
+++ b/Code&Or/index.html
@@ -30,6 +30,8 @@
           </script>
           <meta name="viewport">
           <meta name="description" content="Code&Or est un système de codagde de blocs, texte & intlligence artificielle">
+          <meta name="theme-color" content="#464646"/>
+
     </head>
     <body>
         <div id="load"><h1>Code&Or</h1><br>Chargement en cours... <br><noscript>Activez javascript pour utiliser Code&or</noscript></div>
