--- a/Code&Or/index.html
+++ b/Code&Or/index.html
@@ -12,7 +12,7 @@
                 document.querySelector("body").style.visibility = "hidden";
                 document.querySelector("#chargement").style.visibility = "visible";
                 document.querySelector("#load").style.visibility = "visible";
-                document.body.background="rgb(70, 70, 70);";
+                document.body.background.color="rgb(70, 70, 70);";
           document.body.color="rgb(255, 255, 255)";
           document.title="Code&Or";
               }
@@ -22,7 +22,7 @@
                 document.querySelector("#load").style.display = "none";
                 document.querySelector("body").style.visibility = "visible";
                 document.querySelector("#img").style.display = "none";
-          document.body.background="rgb(70, 70, 70);";
+          document.body.background.color="rgb(70, 70, 70);";
           document.body.color="rgb(255, 255, 255)";
           document.title="Olop Code&Or - Loading...";
               }
