--- a/Code&Or/index.html
+++ b/Code&Or/index.html
@@ -25,7 +25,7 @@
           <meta name="theme-color" content="#464646"/>
 
     </head>
-    <body>
+    <body id="body">
         <div id="chargement" style="color:yellow"><h1>Code&Or</h1></div>
         Olop !
     </body>
