--- a/Code&Or/index.html
+++ b/Code&Or/index.html
@@ -25,8 +25,10 @@
           <meta name="theme-color" content="#464646"/>
 
     </head>
-    <body id="body">
+    <body>
         <div id="chargement" style="color:yellow"><h1>Code&Or</h1></div>
-        Olop !
+        <div id="body">
+          Olop !
+        </div>
     </body>
 </html>
